🐛 FIX: Glitchy Scrolling on mobile

--- a/app/page.module.css
+++ b/app/page.module.css
@@ -5,6 +5,7 @@
     border-top-width: 2px;
     position: relative;
     z-index: 8;
+    transform: translateZ(0);
 }
 .content {
     margin: 0 auto;
