--- a/components/home/Hero/Hero.module.css
+++ b/components/home/Hero/Hero.module.css
@@ -7,8 +7,6 @@
     width: 100%;
     position: sticky;
     top: 0;
-    left: 0;
-    z-index: 5;
 }
 
 .container * h2 {
